aRts-0.7.0:
- new interface for video embedding (Arts::VideoPlayObject) via X11 embedding
- threaded oss audio i/o (-a toss) which works better with some kernel drivers
- irix audio i/o method (-a sgi)
- ALSA-0.9.0 support

aRts-0.6.1:
- new artsdsp -s (single threaded) option for compatibility to more programs
  (for instance netscape)
- ALSA-0.9.0 support
- bugfixes: artsdsp/artsc rpath fix, alsa crash without soundcard fixed, md5
  cookie loading, oss driver endianess issue, compile fixes

aRts-0.6.0:
- new interfaces (Arts::InputStream, Arts::StreamPlayObject) for decoding
  streams of data with PlayObjects (rather than just files)
- new Arts::PitchablePlayObject for changing playing speed/pitch
- support for streaming of data from kioslaves into PlayObjects
- dynamic implementation of classes/attributes (Arts::DynamicSkeleton)

(some of the items that are listed in aRts-0.6.0 have been done somewhere
 between 0.4 and 0.6 and only now found its way into this)

aRts-0.5.4:
- fix random segfaults on solaris

aRts-0.5.3:
- performance improvement for aRts midi instruments (bus code rewritten)
- structures designed by artsbuilder can be used modules in structures again
  (and elsewhere), via generic Arts::Loader's

aRts-0.5.2:
- threading support (libmcop_mt)
- glib-2.0 mainloop integration (libgmcop)
- KArtsWidget makes it easy to use Arts::Widget implementations in conjunction
  with qt widgets (i.e. no extra window), this also removes the annoying extra
  window in artscontrol
- generic gui factory used by noatun and artscontrol to create effect guis

================================================================================
This file starts in the middle of nowhere, because it hasn't always been
here. But please update this if you do bigger changes (fixing a spelling
error in a comment probably doesn't count, doing one of the TODO items
most certainly does).