@@ -24,8 +24,6 @@
 - mcopidl: use unsigned char arrays instead of strings for inline marshalled
   data in idl files - this will fix the "maximum string length" warnings and
   while doing this improve space and speed
-- implement a preferences system for the trader, to be able to choose one
-  implementation over another if they both implement the same interface
 - try to clean up notification manager, code generation and _copy() _release()
   style referencing across functions in notification and Dispatcher - the
   alternatives seem to be even more automatic referencing magic, or freeing
